re PR bootstrap/36974 (Gcc failed to bootstrap)

2008-07-30  Rafael Avila de Espindola  <espindola@google.com>

	PR 36974
	* final.c (call_from_call_insn): Handle COND_EXEC

From-SVN: r138347